[workspace]
members = ["crates/*", "client", "server", "shared"]

[patch.crates-io]
bevy_webgl2 = {path = "patches/bevy_webgl2"}
nphysics2d = {path = "patches/nphysics/build/nphysics2d"}

[patch."https://github.com/ostwilkens/bevy_web_fullscreen"]
bevy_web_fullscreen = {path = "patches/bevy_web_fullscreen"}
