[package]
name = "client"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

[features]
inspect-control-config = []
debug-fly-camera = [
    "bevy_fly_camera",
]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy_kira_audio/ogg"
]
native = [
  "shared/native",
  "bevy/bevy_wgpu",
  "bevy_networking_turbulence/use-udp",
]
web = [
  "shared/web",
  "bevy_webgl2",
  "web-sys/Window",
  "web-sys/UrlSearchParams",
  "web-sys/Location",
  "web-sys/Document",
  "web-sys/Element",
  "web-sys/DomTokenList",
  "bevy_networking_turbulence/use-webrtc",
]
dynamic = [
  "bevy/dynamic",
]

[dependencies]
shared = {path = "../shared"}
bevy = {version = "0.4", default-features = false}
bevy-contrib-inspector = "0.5.1"
bevy_fly_camera = {version = "0.6.0", optional = true}
bevy_kira_audio = "0.3.0"
bevy_networking_turbulence = {version = "0.2.0", default-features = false}
bevy_prototype_lyon = {git = "https://github.com/Nilirad/bevy_prototype_lyon", branch = "master"}
bevy_webgl2 = {version = "0.4.0", optional = true}
bevy_web_fullscreen = {git = "https://github.com/ostwilkens/bevy_web_fullscreen", rev = "392d985a56f23a5318a1fb4276d62054595bce91"}
bevy_prototype_frameshader = {path = "../crates/bevy_prototype_frameshader"}
bevy_prototype_networked_physics = {path = "../crates/bevy_prototype_networked_physics", default-features = false}
bevy_prototype_transform_tracker = {path = "../crates/bevy_prototype_transform_tracker"}
rand = "0.8.3"
winit = "0.24.0"
wasm-bindgen = "0.2.45"
web-sys = "0.3.22"
wasm-bindgen-console-logger = "0.1.1"
log = "0.4"
