[package]
name = "client"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

[features]
inspect-control-config = []
debug-fly-camera = [
    "bevy_fly_camera",
]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy_kira_audio/ogg"
]
native = [
  "shared/native",
  "bevy/bevy_wgpu",
  "crystalorb-bevy-networking-turbulence/use-udp",
]
web = [
  "shared/web",
  "bevy_webgl2",
  "web-sys/Window",
  "web-sys/UrlSearchParams",
  "web-sys/Location",
  "web-sys/Document",
  "web-sys/Element",
  "web-sys/DomTokenList",
  "crystalorb-bevy-networking-turbulence/use-webrtc",
]
dynamic = [
  "bevy/dynamic",
]

[dependencies]
shared = {path = "../shared"}
bevy = {version = "0.5", default-features = false}
bevy_fly_camera = {version = "0.7.0", optional = true}
bevy_kira_audio = "0.5.0"
bevy_prototype_lyon = {git = "https://github.com/Nilirad/bevy_prototype_lyon", branch = "master"}
bevy_webgl2 = {version = "0.5.2", optional = true}
bevy_web_fullscreen = {git = "https://github.com/ostwilkens/bevy_web_fullscreen", rev = "b363df1ee60f948e99dbf5ad71d489066d80b052"}
bevy_prototype_frameshader = {path = "../crates/bevy_prototype_frameshader"}
bevy_prototype_transform_tracker = {path = "../crates/bevy_prototype_transform_tracker"}
crystalorb-bevy-networking-turbulence = {version = "0.2.0", default-features = false}
rand = "0.8.3"
winit = "0.24.0"
wasm-bindgen = "0.2.45"
web-sys = "0.3.22"
wasm-bindgen-console-logger = "0.1.1"
log = "0.4"
