[package]
name = "server"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

[features]
default = [
  # "bevy/dynamic",
  # TODO: enable these only for debug window builds
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy_prototype_networked_physics/use-webrtc",
  "winit",
]
web = [
  "web-sys/Document",
  "web-sys/Element",
  "web-sys/HtmlElement",
  "web-sys/Node",
  "web-sys/Window",
  "web-sys/Url",
  "web-sys/Location",
]
native = [
  "bevy/bevy_wgpu",
]

[dependencies]
shared = {path = "../shared"}
bevy = {version = "0.4", default-features = false}
bevy_prototype_networked_physics = {path = "../crates/bevy_prototype_networked_physics", default-features = false}
bevy_prototype_transform_tracker = {path = "../crates/bevy_prototype_transform_tracker"}
winit = {version = "0.24.0", optional = true}
wasm-bindgen = "0.2.45"
web-sys = "0.3.22"
