[package]
name = "naia-socket-shared"
version = "0.4.1"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
description = "Common data types shared between naia-server-socket & naia-client-socket crates"
documentation = "https://docs.rs/naia-socket-shared"
homepage = "https://github.com/naia-rs/naia-socket"
repository = "https://github.com/naia-rs/naia-socket"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
multithread = [ ]
wbindgen = [ "wasm-bindgen", "js-sys" ]
mquad = [ ]

[dependencies]
log = "0.4"
cfg-if = "0.1.10"
local_ipaddress = "0.1.3"
rand = "0.7.3"
wasm-bindgen = { version = "0.2.45", optional = true }
js-sys = { version = "0.3", optional = true }
byteorder = "1.3"