[package]
name = "shared"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

[features]
default = [
  "bevy/render",
]
web = [
  "crystalorb-bevy-networking-turbulence/use-webrtc",
]
native = [
  "crystalorb-bevy-networking-turbulence/use-udp",
]

[dependencies]
bevy = {version = "0.5", default-features = false}
bevy_prototype_transform_tracker = {path = "../crates/bevy_prototype_transform_tracker"}
crystalorb-bevy-networking-turbulence = {version = "0.2.1", default-features = false}
nalgebra = {version = "0.27.1", features = ["serde-serialize"]}
nphysics2d = "0.22"
lyon = "0.16.2"
num = "0.3.1"
rand = "0.8.3"
serde="1.0.118"
splines = {version = "4.0.0", features = ["impl-nalgebra"]}
web_sys = {version = "0.3.22", package = "web-sys", features = ["console"]}
