[package]
name = "signalling-server"
version = "0.1.0"
authors = ["Ernest Wong <sudo@ernestwong.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-actors = "3"
actix = "0.10.0"
nanoid = "0.1.3"
tokio = { version = "1.4.0", features = ["sync"] }
