[package]
name = "naia-client-socket-bindgen-example"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
version = "0.0.0"
workspace = "../../../"
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "index" # This is because cargo-web also picks up the static assets folder...
path = "src/main.rs"

[features]
multithread = [ "naia-client-socket/multithread" ]
wbindgen = [ "naia-client-socket/wbindgen" ]

[dependencies]
naia-client-socket = { path = "../../../client" }
log = "0.4.6"
cfg-if = "0.1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = { version = "0.2.0" }
wasm-bindgen = { version = "0.2.45", features = [ "serde-serialize" ] }
web-sys = { version = "0.3.4", features = [ 'Window' ] }